--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 Vérifier les casts
-Optimiser la SFML (ne pas recharger le bg par exemple)
 Limiter la récupération des libaries à 5
+Vérifier les leaks
