--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Vérifier les casts
 Vérifier les leaks
 Gestion d'erreur de la map PACMAN
+
+Voir pour le "double clic automatique" sur le menu en SFML (onclickover)
